syntax = "proto3";

package the.dummy;

option go_package = "my-protobuf/protogen/dummy";

/**
job application
 */

message Application {
  uint32 application_id = 1 [json_name = "application_id"];
  string application_full_name = 2 [json_name = "application_full_name"];
  string phone = 3;
  string email = 4;
}